
	(getpid): Declaim return type explicitly, to make SBCL shut up about
	being unable to optimize %SAP-ALIEN in ENABLE-SIGIO-ON-FD.

	* slime.el (def-slime-test break): Test additionally that BREAK
	turns into SLDB even when *DEBUGGER-HOOK* is locally bound.
	(def-slime-test locally-bound-debugger-hook): New test case; tests
	that a locally-bound *DEBUGGER-HOOK* is adhered, and not skipped.
	
2008-03-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* HACKING: Updated due to broken links. 
	Reported by Mirko Vukovic.

2008-03-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-set-connection-info): Display SLIME and SWANK
	versions explicitly in Protocol Mismatch message.  Adapted from
	idea and patch by Jeronimo Pellegrini.
	
2008-03-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-source-path-parser.lisp 

	The source parser READs in files, and if such a file contains some
	nasty #. hackery that results in an error being signalled, M-. would
	fail on anything that's defined in those files. Fix that by using
	a special #. reader function that invokes the original #. reader 
	with an IGNORE-ERRORS wrapped around.

	(make-sharpdot-reader): New function.
	(make-source-recording-readtable): Use it and install it on #.

	* slime.el (find-definition.2): New test case to guard against it.

2008-03-18  Geo Carncross <geocar@gmail.com>

	* swank-ecl.lisp: ECL moved gray streams into GRAY package.

2008-03-18  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-xref-group): Handle :zip files.

2008-03-17  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-source-path-parser.lisp:

	Multibyte characters in files could screw up compiler-notes
	highlighting on SBCL. Fix that.

	(skip-toplevel-forms): Abstracted out from READ-SOURCE-FORM.
	(source-path-file-position): Don't operate on the file stream
	directly, since CL:FILE-POSITION may not return character but
	binary offsets on such streams; instead slurp file content into a